--- a/toolmaker.conf
+++ b/toolmaker.conf
@@ -2,7 +2,7 @@
 gzip  on;
 
 upstream requirement {
-    server 10.254.48.73:8001 max_fails=0 fail_timeout=10s;
+    server requirement-svc:8001 max_fails=0 fail_timeout=10s;
     keepalive 20000;
 }
 
