change to /req/v1

--- a/toolmaker.conf
+++ b/toolmaker.conf
@@ -37,7 +37,7 @@ server {
         index  index.html index.htm;
     }
 
-    location /api/v1/requirements/ {
+    location /req/v1/requirements/ {
         proxy_pass http://requirement;
     }
 
