modify URL req to requirement

--- a/web.conf
+++ b/web.conf
@@ -37,7 +37,7 @@ server {
         index  index.html index.htm;
     }
 
-    location /req/v1/ {
+    location /requirement/v1/ {
         proxy_pass http://requirement;
     }
 
