modify req port

--- a/web.conf
+++ b/web.conf
@@ -37,7 +37,7 @@ server {
         index  index.html index.htm;
     }
 
-    location /requirement/v1/ {
+    location /toolmaker/v1/req {
         proxy_pass http://requirement;
     }
 
