--- a/web.conf
+++ b/web.conf
@@ -37,7 +37,7 @@ server {
         index  index.html index.htm;
     }
 
-    location /toolmaker/requirement/v1 {
+    location /api/requirement/v1 {
         proxy_pass http://requirement;
     }
 
