--- a/web.conf
+++ b/web.conf
@@ -6,6 +6,11 @@ upstream requirement {
     keepalive 20000;
 }
 
+upstream user {
+    server 10.254.32.181:8002 max_fails=0 fail_timeout=10s;
+    keepalive 20000;
+}
+
 server {
     listen       8000;
     server_name  localhost;
@@ -41,6 +46,13 @@ server {
         proxy_pass http://requirement;
     }
 
+    location /api/user {
+        proxy_pass http://user;
+    }
+
+    location /api/user/v1 {
+        proxy_pass http://user;
+    }
 
     error_page  405     =200 $uri;
     error_page  403 /403.html;
