--- a/web.conf
+++ b/web.conf
@@ -42,16 +42,16 @@ server {
         index  index.html index.htm;
     }
 
-    location /api/requirement/v1 {
+    location /auth {
+        proxy_pass http://user;
+    }
+
+    location /v1/users {
+        proxy_pass http://user;
+    }
+
+    location /v1/requirements {
         proxy_pass http://requirement;
-    }
-
-    location /api/user {
-        proxy_pass http://user;
-    }
-
-    location /api/user/v1 {
-        proxy_pass http://user;
     }
 
     error_page  405     =200 $uri;
