--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
     "axios": "0.16.2",
     "codemirror": "5.26.0",
     "dropzone": "5.1.0",
-    "echarts": "3.6.1",
-    "element-ui": "1.4.1",
+    "echarts": "3.6.2",
+    "element-ui": "1.4.2",
     "file-saver": "1.3.3",
-    "jquery": "3.1.1",
     "js-cookie": "2.1.4",
     "jsonlint": "1.6.2",
     "mockjs": "1.0.1-beta3",
-    "normalize.css": "3.0.2",
+    "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "screenfull": "3.2.2",
     "showdown": "1.7.1",
@@ -31,9 +30,10 @@
     "sortablejs": "1.5.1",
     "vue": "2.4.2",
     "vue-count-to": "1.0.5",
-    "vue-multiselect": "2.0.0-beta.15",
-    "vue-router": "2.5.3",
-    "vuedraggable": "2.13.1",
+    "vue-multiselect": "2.0.2",
+    "vue-router": "2.7.0",
+    "vue-splitpane": "^1.0.0",
+    "vuedraggable": "2.14.1",
     "vuex": "2.3.1",
     "xlsx": "^0.10.8"
   },
@@ -75,8 +75,9 @@
     "script-loader": "0.7.0",
     "semver": "5.3.0",
     "style-loader": "0.17.0",
+    "svg-sprite-loader": "3.2.4",
     "url-loader": "0.5.8",
-    "vue-loader": "12.2.1",
+    "vue-loader": "13.0.4",
     "vue-style-loader": "3.0.1",
     "vue-template-compiler": "2.4.2",
     "webpack": "2.6.1",
