update url to /v1/auth [ci skip]

--- a/web.conf
+++ b/web.conf
@@ -42,7 +42,7 @@ server {
         index  index.html index.htm;
     }
 
-    location /auth {
+    location /v1/auth {
         proxy_pass http://user;
     }
 
