--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "axios": "0.16.2",
-    "clipboard": "^1.7.1",
+    "clipboard": "1.7.1",
     "codemirror": "5.26.0",
     "dropzone": "5.1.0",
     "echarts": "3.7.2",
@@ -22,7 +22,6 @@
     "file-saver": "1.3.3",
     "js-cookie": "2.1.4",
     "jsonlint": "1.6.2",
-    "jszip": "^3.1.4",
     "mockjs": "1.0.1-beta3",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
@@ -37,7 +36,8 @@
     "vue-splitpane": "^1.0.0",
     "vuedraggable": "2.14.1",
     "vuex": "2.3.1",
-    "xlsx": "^0.10.8"
+    "xlsx": "^0.10.8",
+    "jszip": "^3.1.4"
   },
   "devDependencies": {
     "autoprefixer": "7.1.1",
